[gd_scene load_steps=2 format=3 uid="uid://drc40bs66ebjm"]

[ext_resource type="Script" uid="uid://d0y1lwxa0sxg6" path="res://scripts/pile_card.gd" id="1_2mn5y"]

[node name="PileCard" type="Control"]
layout_mode = 3
offset_top = -32.76
offset_bottom = -32.76
size_flags_horizontal = 0
script = ExtResource("1_2mn5y")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -36.0
offset_right = 302.0
offset_bottom = 36.0
grow_vertical = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 2

[node name="CompanyLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nyirma és Hegyipusztai Ebt."
vertical_alignment = 2
autowrap_mode = 3

[node name="CityLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Herend"
vertical_alignment = 2

[node name="SiteLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "26E"

[node name="TypeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "tölgy"

[node name="VolumeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "23,64 m3"

[node name="LengthLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "2,10 m"
